Bug 1633828 - Check for empty text nodes in nsFind::PeekNextChar. r=jfkthame

This check was done in GetNextNonEmptyTextFragmentInSameBlock which I
removed in bug 1627643.

Hopefully the fuzzer finds an easy reduced test-case to land as a
crashtest, otherwise I can try to construct one.

Differential Revision: https://phabricator.services.mozilla.com/D72926